| Bug #7302 | UCS2 data in ENUM field get truncated when new column is added | ||
|---|---|---|---|
| Submitted: | 14 Dec 2004 23:05 | Modified: | 21 Dec 2004 13:17 |
| Reporter: | Shuichi Tamagawa | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.8 (bk Dec 13) | OS: | Linux (SuSE Linux 9.0) |
| Assigned to: | Alexander Barkov | Target Version: | |
[20 Dec 2004 9:49]
Hartmut Holzgraefe
mysql> show warnings; +---------+------+----------------------------------------+ | Level | Code | Message | +---------+------+----------------------------------------+ | Warning | 1265 | Data truncated for column 'a' at row 1 | | Warning | 1265 | Data truncated for column 'a' at row 2 | | Warning | 1265 | Data truncated for column 'a' at row 3 | +---------+------+----------------------------------------+ 3 rows in set (0,00 sec) mysql> select * from t1; +------+------+ | a | b | +------+------+ | | NULL | | | NULL | | | NULL | +------+------+ 3 rows in set (0,07 sec)
[21 Dec 2004 13:17]
Alexander Barkov
Fixed in 4.1.9

Description: If table's character set is ucs2 and it has some data in ENUM field, the data get truncated when new column is added. How to repeat: --disable_warnings drop table if exists t1; --enable_warnings set names ujis; set character_set_database = ucs2; create table t1(a enum('a','b','c')) default character set = ucs2; insert into t1 values('a'),('b'),('c'); alter table t1 add b char(1); show warnings; drop table t1;