Bug#7302: UCS2 data in ENUM field get truncated when new column is added